# turb2d

./: .gitignore  LICENSE  LICENSE~  README.rst  animation_turb2d.py  pyproject.toml  requirements.txt  requirements.txt~  run_multiflow_script.py  run_turb2d_script.py  setup.py  setup.py~
model_documentation/: theory.aux  theory.tex  theory.tex~
tests/: conftest.py  test_debris_flow.py
turb2d/: __init__.py  _links.py  _neighbors_at_link.c  _neighbors_at_link.pyx  cip.py  cip.pyx  cip.py~  find_wetdry.pyx  gridutils.py  plot.py  plot.py~  run_flows.py  sediment_func.py  sediment_func.py~  setup.py  test_cip.py  turb2d.py  turb2d.py~  utils.py  wetdry.py
